# nareshka-mono

./: .claude_ai_assistant.md  .claude_hooks.json  .claude_prompts.md  .claude_settings.json  .claude_workflows.json  .env  .gitignore  .mcp.json  .nareshka_ccplugins_config.md  .vscodeignore  BROWSER_LOGGING_SETUP.md  CLAUDE.md  CODE_EDITOR_GUIDE.md  DATABASE_ANALYSIS_REPORT.md  INTEGRATION_GUIDE.md  INTERMEDIATE_DATA_ANALYSIS_REPORT.md  README.md  backup.bat  backup.dump  browser-logging-config.json  cookies.txt  dev-start.bat  dev-stop.bat  docker-compose.dev.yml  docker-compose.yml  kill-dev.sh  nareshka_development_ideas.md  nareshka_priority_roadmap.md  openapi.json  openapi_current.json  package-lock.json  pyproject.toml  pyrightconfig.example.json  pyrightconfig.json  register_test.json  repository_analysis.md  restore.bat  start-dev-simple.bat  start-dev.bat  start-dev.sh  (+12 more)
back/: .dockerignore  .env  .env.backup  .mypy.ini  Dockerfile  Testing  alembic.ini  analyze_tasks.py  check_progress.py  check_users.py  cookies.txt  debug_db.py  detailed_analysis_result.json  entrypoint.sh  final_test.json  generate_openapi.py  init_languages.py  init_supported_languages.py  login.json  main.py  mindmap_test.json  openapi.json  populate_languages.py  pyproject.toml  pyrightconfig.json  simple_openapi_gen.py  tasks_response.json  test_auth_api.py  test_generator_on_real_tasks.py  test_server.py  test_with_session.json
back/alembic/: env.py
back/alembic/versions/: 20250730_add_interview_tables.py  42c1e4093aa2_allow_nullable_userid_in_codeexecution.py  5563f9444a1b_ensure_user_fields_exist.py  70e29a44e92f_add_companies_field_to_contentblock.py  7e0bae8da878_merge_heads.py  847eaf5fe1f9_add_progress_tracking_models_fixed.py  8aa94f4d5a35_update_indexes_for_new_architecture.py  906724d607f1_remove_content_field_from_interview_.py  9a819e455b7d_add_user_profile_fields_manual.py  a0677d29a5f7_add_testcase_and_testvalidationresult_.py  add_interview_categories.py  b025597888a1_remove_tags_field_from_interviewrecord.py  b8b6bd67e2fc_initial_migration.py  bcbb5b411c42_add_code_editor_tables.py  fix_interview_question_ids.py  universe_3d_coordinates.py
back/app/: __init__.py  auth.py  code_executor.py  config.py  database.py  mindmap_config.py  models.py  schemas.py  utils.py
back/app-clean-arch/application/dto/: auth_dto.py  code_editor_dto.py  progress_dto.py  task_dto.py  theory_dto.py
back/app-clean-arch/application/services/: __init__.py  ai_test_generator_service.py  auth_service.py  code_editor_service.py  code_executor_service.py  task_service.py  theory_service.py
back/app-clean-arch/config/: mindmap_config.py
back/app-clean-arch/core/: __init__.py  error_handlers.py  exceptions.py  logging.py
back/app-clean-arch/domain/entities/: __init__.py  code_editor_types.py  mindmap_types.py  theory_types.py
back/app-clean-arch/domain/repositories/: base_repository.py  code_editor_repository.py  content_repository.py  mindmap_repository.py  stats_repository.py  user_repository.py
back/app-clean-arch/infrastructure/database/: connection.py
back/app-clean-arch/infrastructure/models/: __init__.py  code_execution_models.py  content_models.py  enums.py  test_case_models.py  theory_models.py  user_models.py
back/app-clean-arch/infrastructure/repositories/: __init__.py  sqlalchemy_admin_repository.py  sqlalchemy_code_editor_repository.py  sqlalchemy_mindmap_repository.py  sqlalchemy_progress_repository.py
back/app-clean-arch/presentation/api/: __init__.py  admin_v2.py  auth_v2.py  health.py  mindmap_v2.py  stats_v2.py  task_v2.py
back/app-clean-arch/shared/: dependencies.py
back/app-simplest-arch/: ai_test_generator.py  config.py  database.py  models.py  schemas.py
back/app-simplest-arch/routers/: admin.py  auth.py  content.py  progress.py  stats.py  tasks.py
back/app/application/: __init__.py
back/app/application/dto/: __init__.py  admin_dto.py  auth_dto.py  base_dto.py  code_editor_dto.py  content_dto.py  mindmap_dto.py  progress_dto.py  stats_dto.py  task_dto.py  test_case_dto.py  theory_dto.py
back/app/application/services/: __init__.py  admin_service.py  ai_test_generator_service.py  auth_service.py  code_editor_service.py  content_service.py  (+6 more)
back/app/config/: __init__.py  mindmap_config.py  new_settings.py  settings.py
back/app/core/: __init__.py  error_handlers.py  exceptions.py  health.py  logging.py  rate_limiter.py  settings.py
back/app/domain/: __init__.py
back/app/features/: __init__.py
back/app/infrastructure/: __init__.py
back/app/presentation/: __init__.py
back/app/routers/: __init__.py  admin.py  auth.py  code_editor.py  content.py  mindmap.py  progress.py  stats.py  tasks.py  theory.py
back/app/shared/: __init__.py  auth_schemes.py  dependencies.py  utils.py
back/backup/: backup_20250713.sql
back/scripts/: add_audio_recording_field.py  apply_interview_cleaning.py  clean_interview_content.py  generate_openapi.py  import_categorized_questions.py  import_final_categorized_data.py  import_fixed_data.py  import_interviews.py  import_llm_reports.py  init_languages.py  init_languages_simple.py  init_supported_languages.py  migrate_question_ids.py  populate_languages.py  populate_universe_coordinates.py  quick_clean_check.py  simple_import.py  temp_import.py  test_cleaning.py  test_with_real_data.py
back/scripts/analysis/: analyze_md_structure.py  deep_content_analysis.py
back/scripts/debug/: check_progress.py  check_users.py  debug_db.py  debug_matching.py  test_companies.py  test_endpoint.py
back/scripts/extraction/: extract_all_companies_and_tasks_perfect.py
back/scripts/matching/: final_company_matcher.py
back/scripts/sql/: add_supported_languages.sql
(+1403 files in other folders)
