[tool.poetry]
name = "recruitment-intelligence"
version = "0.1.0"
description = "IT Recruitment Intelligence Dashboard - анализ реальных собеседований"
authors = ["Developer <dev@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
plotly = "^5.17.0"
streamlit = "^1.28.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
spacy = "^3.7.0"
wordcloud = "^1.9.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"
python-dateutil = "^2.8.0"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100 