[tool.poetry]
name = "nsbn-backend"
version = "0.1.0"
description = "NSBN Backend API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
sqlalchemy = "*"
alembic = "*"
redis = "*"
bcrypt = "*"
python-multipart = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"
aiofiles = "*"
httpx = "*"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 